@@ -86,7 +86,7 @@ public class ListBookServiceImpl implements ListBookService {
 		    		BookCategoryDTO bookCategoryDTO = new BookCategoryDTO();
 		    		BeanUtils.copyProperties(e, bookCategoryDTO);
 		    		return bookCategoryDTO;
-		    	}).toList();
+		    	}).collect(Collectors.toList());
 		    	bookDTO.setCategories(listBookCategoryDTOs);
 		    	
 		    	return bookDTO;
